# ForwardCraft

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
src/forwardcraft/: __init__.py  __main__.py  cli.py  config.py
src/forwardcraft/agents/: __init__.py
src/forwardcraft/integrations/: __init__.py
src/forwardcraft/workflows/: __init__.py
tests/: test_cli.py
web/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json
web/docs/: careers-apply-setup.md  site-audit.md
web/scripts/: db-setup.mjs
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/ai-training/: page.tsx
web/src/app/blog/: page.tsx
web/src/app/careers/: page.tsx
web/src/app/case-studies/: page.tsx
web/src/app/contact/: page.tsx
web/src/app/events/: page.tsx
web/src/app/how-we-work/: page.tsx
web/src/app/industries/: page.tsx
web/src/app/newsletter/: page.tsx
web/src/app/newsroom/: page.tsx
web/src/app/partnerships/: page.tsx
web/src/app/privacy/: page.tsx
web/src/app/reports/: page.tsx
web/src/app/research/: page.tsx
web/src/app/solutions/: page.tsx
web/src/app/terms/: page.tsx
web/src/components/animations/: CountUp.tsx  Marquee.tsx  Reveal.tsx  StaggerText.tsx
web/src/components/cards/: ArticleCard.tsx  CaseStudyCard.tsx  EventCard.tsx  IndustryCard.tsx  JobCard.tsx  SolutionCard.tsx
web/src/data/mock/: articles.ts  (+15 more)
web/src/lib/: applications.ts  content.ts  db.ts  icons.tsx  site.ts  utils.ts
web/src/types/: index.ts
(+53 files in other folders)
