[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forwardcraft"
dynamic = ["version"]
description = "ForwardCraft — Custom AI Agents · Workflow Automation · Software Integration"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "11andyxz" }]
keywords = ["ai-agents", "workflow-automation", "software-integration", "llm", "automation"]
dependencies = []

[project.optional-dependencies]
# 可选:加载 .env 文件
dotenv = ["python-dotenv>=1.0"]
# 可选:常用 AI agent / LLM 框架(按需取消注释后再安装)
# agents = ["langchain>=0.2", "langgraph>=0.2", "openai>=1.0", "anthropic>=0.30"]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.scripts]
forwardcraft = "forwardcraft.cli:main"

[project.urls]
Homepage = "https://github.com/11andyxz/ForwardCraft"
Repository = "https://github.com/11andyxz/ForwardCraft"

[tool.hatch.version]
path = "src/forwardcraft/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/forwardcraft"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
